[project]
name = "fast-kernel-density-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.6"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.2",
    "matplotlib>=3.10.3",
    "maturin>=1.8.6",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]
